[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Sprites/Ground.png" type="Texture" id=1]
[ext_resource path="res://Common/Res/Entities/Field.gd" type="Script" id=2]
[ext_resource path="res://Common/Res/Themes/DefaultTheme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Sprites/Shield.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Clock.png" type="Texture" id=5]
[ext_resource path="res://Common/Res/Fonts/NunitoSans-28.tres" type="DynamicFont" id=6]
[ext_resource path="res://Assets/Sprites/Attack.png" type="Texture" id=7]
[ext_resource path="res://Common/Res/Fonts/NunitoSans-64B.tres" type="DynamicFont" id=8]
[ext_resource path="res://Assets/Audio/SoundEffects/Heal.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/Audio/SoundEffects/GetMoney.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/Audio/SoundEffects/Plant.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/Sprites/HarvestButton.png" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 100, 100 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform sampler2D color_sprite;

void fragment(){
	COLOR = texture(color_sprite, UV);
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )

[sub_resource type="Animation" id=4]
resource_name = "Damage"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("EffectLabel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -38, -44 ), Vector2( -38, -166 ), Vector2( -38, -171 ), Vector2( -38, -147 ), Vector2( -38, -15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EffectLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.960784, 0.0941176, 0.0941176, 0 ), Color( 0.960784, 0.0941176, 0.0941176, 1 ), Color( 1, 0.533333, 0.533333, 1 ), Color( 0.960784, 0.0941176, 0.0941176, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Heal"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("EffectLabel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -38, -44 ), Vector2( -38, -166 ), Vector2( -38, -171 ), Vector2( -38, -147 ), Vector2( -38, -15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EffectLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.960784, 0.0941176, 0.0941176, 0 ), Color( 0.231373, 0.952941, 0.054902, 1 ), Color( 0.639216, 0.917647, 0.568627, 1 ), Color( 0.231373, 0.952941, 0.054902, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Money"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("EffectLabel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -38, -44 ), Vector2( -38, -166 ), Vector2( -38, -171 ), Vector2( -38, -147 ), Vector2( -38, -15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EffectLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.952941, 0.87451, 0.054902, 0 ), Color( 0.952941, 0.87451, 0.054902, 1 ), Color( 0.890196, 0.847059, 0.396078, 1 ), Color( 0.952941, 0.87451, 0.054902, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EffectLabel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -38, -44 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EffectLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.917647, 0.0980392, 0.0980392, 0 ) ]
}

[node name="Field" type="Area2D" groups=["Field"]]
script = ExtResource( 2 )

[node name="FieldSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="FieldInfo" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -250.0
margin_top = -160.0
margin_right = 250.0
margin_bottom = -115.0
theme = ExtResource( 3 )
text = "Empty"
align = 1

[node name="Health" type="Sprite" parent="."]
visible = false
position = Vector2( 104, 112 )
texture = ExtResource( 4 )

[node name="HealthLabel" type="Label" parent="Health"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -19.0
margin_top = -24.0
margin_right = 21.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "2"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Time" type="Sprite" parent="."]
visible = false
position = Vector2( -108, 102 )
texture = ExtResource( 5 )

[node name="TimeLabel" type="Label" parent="Time"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -51.3333
margin_top = -20.0
margin_right = 49.6667
margin_bottom = 25.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 6 )
text = "1/0"
align = 1

[node name="Attack" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -240 )
texture = ExtResource( 7 )

[node name="AttackLabel" type="Label" parent="Attack"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -121.0
margin_top = -73.0
margin_right = -41.0
margin_bottom = -34.0
custom_fonts/font = ExtResource( 6 )
text = "1-3"
align = 1
valign = 1

[node name="AttackSeedSprite" type="Sprite" parent="Attack"]
material = SubResource( 3 )
position = Vector2( 0, 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Damage = SubResource( 4 )
anims/Heal = SubResource( 5 )
anims/Money = SubResource( 7 )
anims/RESET = SubResource( 6 )

[node name="EffectLabel" type="Label" parent="."]
modulate = Color( 0.917647, 0.0980392, 0.0980392, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.0
margin_top = -44.0
margin_right = 38.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 8 )
text = "+1"
align = 1

[node name="Heal" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -5.0

[node name="Harvest" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -5.0

[node name="Plant" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -5.0

[node name="ClickToHarvest" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -121.0
margin_top = -29.5
margin_right = 121.0
margin_bottom = 29.5
mouse_filter = 2
texture = ExtResource( 12 )

[node name="ClickToHarvestLabel" type="Label" parent="ClickToHarvest"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.0
margin_top = -19.5
margin_right = 103.0
margin_bottom = 19.5
custom_fonts/font = ExtResource( 6 )
text = "Click To Harvest"
align = 1

[connection signal="input_event" from="." to="." method="_on_Field_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Field_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Field_mouse_exited"]
